# agenticode

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  metrics.py  pyproject.toml  requirements.txt  validation_metrics.py  validation_setup.py  webhook_server.py
.do/: app.yaml
.github/workflows/: ci.yaml  on-issue-moderation.yaml  on-issue.yaml  on-pr.yaml  on-review-feedback.yaml
agents/: __init__.py  code_agent.py  interaction_orchestrator.py  issue_moderator.py  reviewer_agent.py  task_queue.py
agents/utils/: __init__.py  code_formatter.py  github_app.py  github_client.py  installation_store.py  llm_client.py  prompts.py
data/: huey.db
scripts/: start_local.sh
src/: __init__.py  app.py
tests/: __init__.py  test_code_agent.py  test_code_formatter.py  test_github_client.py  test_issue_moderator.py  test_llm_client.py  test_reviewer_agent.py  test_task_queue.py
tests/load/: locustfile.py  test_concurrent.py
