[project]
name = "agenticode"
version = "0.1.0"
description = "GitHub-Native SDLC Automation System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyGithub>=1.58.0",
    "GitPython>=3.1.30",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pyjwt[crypto]>=2.10.1",
    "flask>=3.0.0",
    "gunicorn>=21.0.0",
    "huey[redis]>=2.5.0",
    "flask-limiter>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "flask>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "src"]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "flask>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "S101",   # Allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108", "E501"]
"webhook_server.py" = ["S104", "S603"]
"agents/issue_moderator.py" = ["E501"]  # Long lines in template strings
"agents/task_queue.py" = ["S110"]  # Intentional try-except-pass for job existence checks
"agents/utils/code_formatter.py" = ["S603", "S607"]  # Subprocess calls to known tools
"agents/utils/prompts.py" = ["E501"]  # Long prompt strings
"agents/utils/installation_store.py" = ["E501"]  # Long SQL strings
"agents/utils/github_client.py" = ["E501"]  # Long docstrings

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=agents --cov-report=term-missing"
